finished the add ingredient and grocery list

--- a/WebApplication.Web/Views/GroceryList/AddIngredient.cshtml
+++ b/WebApplication.Web/Views/GroceryList/AddIngredient.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Ingredients
 @{
-    ViewData["Title"] = "AddIngredientToGroceryList";
+    ViewData["Title"] = "AddIngredient";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
